--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "isbot": "^5.1.31",
     "katex": "^0.16.25",
     "lucide-react": "^0.546.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
@@ -44,6 +45,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "shiki": "^3.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1"
   },
