--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "@shikijs/transformers": "^3.13.0",
+    "@t3-oss/env-core": "^0.13.8",
+    "@tanstack/react-query": "^5.90.5",
+    "@trpc/client": "^11.7.0",
+    "@trpc/react": "^9.27.4",
+    "@trpc/react-query": "^11.7.0",
+    "@trpc/server": "^11.7.0",
     "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +45,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-query": "^3.39.3",
     "react-router": "^7.9.2",
     "react-syntax-highlighter": "^16.0.0",
     "rehype-katex": "^7.0.1",
@@ -47,7 +54,9 @@
     "shiki": "^3.13.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "use-stick-to-bottom": "^1.1.1"
+    "trpc-remix": "10.0.0-alpha.40.1",
+    "use-stick-to-bottom": "^1.1.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
