--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@azure/communication-email": "^1.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -22,6 +25,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@react-email/components": "^1.0.0",
+    "@react-email/render": "^2.0.0",
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
@@ -33,17 +38,22 @@
     "@trpc/react-query": "^11.7.0",
     "@trpc/server": "^11.7.0",
     "ai": "^5.0.76",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "harden-react-markdown": "^1.1.5",
     "isbot": "^5.1.31",
+    "jose": "^6.1.0",
     "katex": "^0.16.25",
     "lucide-react": "^0.546.0",
     "next-themes": "^0.4.6",
+    "pg": "8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-email": "4.2.8",
+    "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
     "react-router": "^7.9.2",
@@ -62,6 +72,7 @@
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/react-syntax-highlighter": "^15.5.13",
