--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@remix-run/react": "^2.17.2",
     "@shikijs/transformers": "^3.13.0",
     "@t3-oss/env-core": "^0.13.8",
     "@tanstack/react-query": "^5.90.5",
